# tensorrag

./: .gitignore  LICENSE  README.md  pyproject.toml
input/: iec81346_example.json
tensorrag/: answering.py  cache.py  cli.py  data.py  retrieval.py  utils.py
